--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,13 +13,14 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/register"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.901" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView6"
@@ -41,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/forget"
         android:drawableStart="@drawable/person_icon"
         android:drawablePadding="5dp"
@@ -53,17 +54,17 @@
         android:textColorHint="#737373"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/register_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/forget"
         android:drawableStart="@drawable/email_icon"
         android:drawablePadding="5dp"
@@ -76,33 +77,33 @@
         android:textColorHint="#737373"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/register_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_username" />
 
     <EditText
         android:id="@+id/register_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/forget"
         android:drawableStart="@drawable/key_icon"
         android:drawablePadding="5dp"
         android:fontFamily="@font/my_bangla_font"
-        android:inputType="textPassword"
         android:hint="পাসওয়ার্ড"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingStart="10dp"
         android:textColor="#000000"
         android:textColorHint="#737373"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/register_confirm_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_email" />
 
 
     <EditText
@@ -110,43 +111,44 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/forget"
         android:drawableStart="@drawable/key_icon"
         android:drawablePadding="5dp"
         android:fontFamily="@font/my_bangla_font"
         android:hint="কনফার্ম পাসওয়ার্ড"
         android:inputType="textPassword"
-        android:paddingStart="10dp"
         android:minHeight="48dp"
+        android:paddingStart="10dp"
         android:textColor="#000000"
         android:textColorHint="#737373"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/register_registerBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.606"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_pass" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register_registerBtn"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginHorizontal="100dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/black_btn"
         android:fontFamily="@font/my_bangla_font"
         android:text="রেজিস্টার"
         android:textColor="#FFF"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/register_login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_confirm_pass" />
 
     <TextView
         android:id="@+id/register_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/my_bangla_font"
         android:gravity="center"
         android:text="@string/iflogin"
@@ -155,16 +157,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="655dp" />
+        app:layout_constraintTop_toBottomOf="@+id/register_registerBtn" />
 
     <ProgressBar
         android:id="@+id/register_progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="24dp"
         android:indeterminateTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
