--- a/app/src/main/res/drawable/gradient_bg_rev.xml
+++ b/app/src/main/res/drawable/gradient_bg_rev.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="0.5dp" android:color="#000000"/>
+<!--            <stroke android:width="0.5dp" android:color="#000000"/>-->
             <corners android:radius="5dp"/>
             <gradient
                 android:type="linear"
