--- a/app/src/main/res/drawable/roundborder.xml
+++ b/app/src/main/res/drawable/roundborder.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false" >
     <shape>
         <solid
-            android:color="#83D36D" />
+            android:color="#5A9E48" />
         <stroke
             android:width="1px"
             android:color="#45a9da" />
