--- a/app/src/main/res/drawable/rounded_green_bg.xml
+++ b/app/src/main/res/drawable/rounded_green_bg.xml
@@ -1,6 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#C422B573" />
     <stroke android:width="0dp" android:color="#000000" />
-    <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
+    <padding
+        android:left="10dp"
+        android:top="10dp"
+        android:right="10dp"
+        android:bottom="10dp" />
+
     <corners android:radius="5dp" />
 </shape>
