--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -5,4 +5,6 @@
         android:title="Logout"/>
     <item android:id="@+id/setting"
         android:title="Setting"/>
+    <item android:id="@+id/history"
+        android:title="History"/>
 </menu>
