--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/drawer_menu_items"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
         android:background="@color/white"/>
 
