--- a/app/src/main/res/layout/activity_jikir_details.xml
+++ b/app/src/main/res/layout/activity_jikir_details.xml
@@ -41,7 +41,6 @@
             android:layout_marginTop="10dp"
             android:text="لَا إِلَهَ إِلَّا اللَّهُ"
             android:textColor="@color/black"
-            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +53,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/my_bangla_font"
             android:gravity="center"
+            android:layout_marginHorizontal="20dp"
             android:text="আল্লাহ মহান পবিত্র"
             android:textColor="@color/black"
             android:textSize="25sp"
