--- a/app/src/main/res/layout/all_jikirs_list_item_template.xml
+++ b/app/src/main/res/layout/all_jikirs_list_item_template.xml
@@ -6,17 +6,18 @@
     android:layout_marginBottom="10dp"
     android:padding="10dp"
     android:elevation="5dp"
+    android:gravity="center"
     android:background="@drawable/gradient_background">
 
         <TextView
             android:id="@+id/select_jikirs_listview_listitem_jikir_text"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="9"
+            android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:fontFamily="@font/my_bangla_font"
             android:text=""
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:gravity="center_vertical"
             android:textAlignment="textEnd"
